[package]
name = "hyper-quickstart"
version = "0.1.0"
authors = ["Ryan Knuesel <ryan.knuesel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "chrono"] }
dotenv = "0.15"
hyper = "0.13"
lazy_static = "1.4"
reqwest = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "0.2", features = ["full"] }
